# rust-asn1

./: .travis.yml  Cargo.toml  README.md  README.rst  clippy.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  fuzz-build.yml  fuzz-cron.yml  fuzz-pr.yml  publish-crates.yml
asn1_derive/: Cargo.toml
asn1_derive/src/: lib.rs
asn1parse/: Cargo.toml
asn1parse/src/: lib.rs  main.rs
benches/: basic.rs
examples/: decode-simple.rs  encode-simple.rs  no_std.rs  x509.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_asn1_parse.rs
src/: base128.rs  bit_string.rs  common.rs  deserializer.rs  lib.rs  macros.rs  object_identifier.rs  object_identitifer.rs  parser.rs  serializer.rs  tag.rs  types.rs  utils.rs  writer.rs
tests/: const_generic_tests.rs  derive_test.rs  oid_tests.rs  roundtrip_tests.rs
