[package]
name = "asn1"
version = "0.22.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
repository = "https://github.com/alex/rust-asn1"
keywords = ["asn1"]
license = "BSD-3-Clause"
description = "ASN.1 (DER) parser and writer for Rust."
categories = ["parser-implementations", "encoding", "no-std"]

edition = "2021"
# This specifies the MSRV
rust-version = "1.74.0"

[features]
default = ["std"]
std = []

[dependencies]
asn1_derive = { path = "asn1_derive/", version = "0.22.0" }
itoa = "1.0.11"

[dev-dependencies]
libc = "0.2.11"
# TODO: upgrade to 0.6 when we raise MSRV
criterion = "0.5"

[workspace]
members = ["asn1_derive", "asn1parse"]

[[bench]]
name = "basic"
harness = false
