[package]
name = "asn1"
version = "0.23.1"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
repository = "https://github.com/alex/rust-asn1"
keywords = ["asn1"]
license = "BSD-3-Clause"
description = "ASN.1 (DER) parser and writer for Rust."
categories = ["parser-implementations", "encoding", "no-std"]

edition = "2021"
# This specifies the MSRV
rust-version = "1.83.0"

[features]
default = ["std"]
std = []

[dependencies]
asn1_derive = { path = "asn1_derive/", version = "0.23.1" }
itoa = "1.0.11"

[dev-dependencies]
libc = "0.2.11"
criterion = "0.7"

[workspace]
members = ["asn1_derive", "asn1parse"]

[[bench]]
name = "basic"
harness = false
