[package]
name = "asn1_derive"
version = "0.22.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
repository = "https://github.com/alex/rust-asn1"
license = "BSD-3-Clause"
description = "#[derive] support for asn1"
edition = "2021"
# This specifies the MSRV
rust-version = "1.74.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.25"
syn = "2.0.8"
