[package]
name = "asn1parse"
version = "0.1.0"
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.74.0"

[dependencies]
asn1 = { version = "0.22", path = ".." }
clap = { version = "4.3", features = ["derive"] }
hex = "0.4.3"
pem = { version = "3.0.4", default-features = false, features = ["std"] }
